--- a/MITx-6.00.1x/Lecture12/Untitled.ipynb
+++ b/MITx-6.00.1x/Lecture12/Untitled.ipynb
@@ -2,84 +2,336 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(L, e):\n",
+    "    for i in range(len(L)):\n",
+    "        if L[i] == e:\n",
+    "            return True\n",
+    "        if L[i] > e:\n",
+    "            return False\n",
+    "    return False\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def newsearch(L, e):\n",
+    "    size = len(L)\n",
+    "    for i in range(size):\n",
+    "        print(size -i -1)\n",
+    "        print (L[size-i-1])\n",
+    "        if L[size-i-1] == e:\n",
+    "            \n",
+    "            return True\n",
+    "        if L[i] < e:\n",
+    "            return False\n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L = [1,2,3,4,5,6,7,8,9,11,22,44,55,66]\n",
+    "e = 11\n",
+    "L1 = []\n",
+    "e1 =133"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newsearch(L1,e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search(L1,e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "0\n",
-      "1\n",
-      "2\n"
+      "True\n"
      ]
     }
    ],
    "source": [
-    "num = 5\n",
-    "L = [2, 0, 1, 5, 3, 4]\n",
-    "val = 0\n",
-    "for i in range(0, num):\n",
-    "    val = L[L[val]]\n",
-    "    print(val)"
+    "for i in L:\n",
+    "    if i == e:\n",
+    "        print ('True')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [1, 2, 3, 4, 0]\n",
-    "b = [3, 0, 2, 4, 1]\n",
-    "c = [3, 2, 4, 1, 5]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def foo(L):\n",
-    "    val = L[0]\n",
-    "    while (True):\n",
-    "        val = L[val]\n",
-    "        print(val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "4\n",
-      "5\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-85-0c4e6960e11f>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-edb2e7519ee5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-11-f2e3de67fca3>\u001b[0m in \u001b[0;36mfoo\u001b[0;34m(L)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mval\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-85-0c4e6960e11f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def swapSort(L[-1:]):\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "foo(c)"
+    "def swapSort(L[-1:]): \n",
+    "    \"\"\" L is a list on integers \"\"\"\n",
+    "    print(\"Original L: \", L)\n",
+    "    for i in range(len(L)):\n",
+    "        for j in range(i+1, len(L)):\n",
+    "            if L[j] < L[i]:\n",
+    "                # the next line is a short \n",
+    "                # form for swap L[i] and L[j]\n",
+    "                L[j], L[i] = L[i], L[j] \n",
+    "                print(L)\n",
+    "    print(\"Final L: \", L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original L:  [66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[55, 66, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[44, 66, 55, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[22, 66, 55, 44, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[11, 66, 55, 44, 22, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[9, 66, 55, 44, 22, 11, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[8, 66, 55, 44, 22, 11, 9, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[7, 66, 55, 44, 22, 11, 9, 8, 6, 5, 4, 3, 2, 1]\n",
+      "[6, 66, 55, 44, 22, 11, 9, 8, 7, 5, 4, 3, 2, 1]\n",
+      "[5, 66, 55, 44, 22, 11, 9, 8, 7, 6, 4, 3, 2, 1]\n",
+      "[4, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 3, 2, 1]\n",
+      "[3, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 2, 1]\n",
+      "[2, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 1]\n",
+      "[1, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[1, 55, 66, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[1, 44, 66, 55, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[1, 22, 66, 55, 44, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[1, 11, 66, 55, 44, 22, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[1, 9, 66, 55, 44, 22, 11, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[1, 8, 66, 55, 44, 22, 11, 9, 7, 6, 5, 4, 3, 2]\n",
+      "[1, 7, 66, 55, 44, 22, 11, 9, 8, 6, 5, 4, 3, 2]\n",
+      "[1, 6, 66, 55, 44, 22, 11, 9, 8, 7, 5, 4, 3, 2]\n",
+      "[1, 5, 66, 55, 44, 22, 11, 9, 8, 7, 6, 4, 3, 2]\n",
+      "[1, 4, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 3, 2]\n",
+      "[1, 3, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 2]\n",
+      "[1, 2, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3]\n",
+      "[1, 2, 55, 66, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3]\n",
+      "[1, 2, 44, 66, 55, 22, 11, 9, 8, 7, 6, 5, 4, 3]\n",
+      "[1, 2, 22, 66, 55, 44, 11, 9, 8, 7, 6, 5, 4, 3]\n",
+      "[1, 2, 11, 66, 55, 44, 22, 9, 8, 7, 6, 5, 4, 3]\n",
+      "[1, 2, 9, 66, 55, 44, 22, 11, 8, 7, 6, 5, 4, 3]\n",
+      "[1, 2, 8, 66, 55, 44, 22, 11, 9, 7, 6, 5, 4, 3]\n",
+      "[1, 2, 7, 66, 55, 44, 22, 11, 9, 8, 6, 5, 4, 3]\n",
+      "[1, 2, 6, 66, 55, 44, 22, 11, 9, 8, 7, 5, 4, 3]\n",
+      "[1, 2, 5, 66, 55, 44, 22, 11, 9, 8, 7, 6, 4, 3]\n",
+      "[1, 2, 4, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 3]\n",
+      "[1, 2, 3, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4]\n",
+      "[1, 2, 3, 55, 66, 44, 22, 11, 9, 8, 7, 6, 5, 4]\n",
+      "[1, 2, 3, 44, 66, 55, 22, 11, 9, 8, 7, 6, 5, 4]\n",
+      "[1, 2, 3, 22, 66, 55, 44, 11, 9, 8, 7, 6, 5, 4]\n",
+      "[1, 2, 3, 11, 66, 55, 44, 22, 9, 8, 7, 6, 5, 4]\n",
+      "[1, 2, 3, 9, 66, 55, 44, 22, 11, 8, 7, 6, 5, 4]\n",
+      "[1, 2, 3, 8, 66, 55, 44, 22, 11, 9, 7, 6, 5, 4]\n",
+      "[1, 2, 3, 7, 66, 55, 44, 22, 11, 9, 8, 6, 5, 4]\n",
+      "[1, 2, 3, 6, 66, 55, 44, 22, 11, 9, 8, 7, 5, 4]\n",
+      "[1, 2, 3, 5, 66, 55, 44, 22, 11, 9, 8, 7, 6, 4]\n",
+      "[1, 2, 3, 4, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5]\n",
+      "[1, 2, 3, 4, 55, 66, 44, 22, 11, 9, 8, 7, 6, 5]\n",
+      "[1, 2, 3, 4, 44, 66, 55, 22, 11, 9, 8, 7, 6, 5]\n",
+      "[1, 2, 3, 4, 22, 66, 55, 44, 11, 9, 8, 7, 6, 5]\n",
+      "[1, 2, 3, 4, 11, 66, 55, 44, 22, 9, 8, 7, 6, 5]\n",
+      "[1, 2, 3, 4, 9, 66, 55, 44, 22, 11, 8, 7, 6, 5]\n",
+      "[1, 2, 3, 4, 8, 66, 55, 44, 22, 11, 9, 7, 6, 5]\n",
+      "[1, 2, 3, 4, 7, 66, 55, 44, 22, 11, 9, 8, 6, 5]\n",
+      "[1, 2, 3, 4, 6, 66, 55, 44, 22, 11, 9, 8, 7, 5]\n",
+      "[1, 2, 3, 4, 5, 66, 55, 44, 22, 11, 9, 8, 7, 6]\n",
+      "[1, 2, 3, 4, 5, 55, 66, 44, 22, 11, 9, 8, 7, 6]\n",
+      "[1, 2, 3, 4, 5, 44, 66, 55, 22, 11, 9, 8, 7, 6]\n",
+      "[1, 2, 3, 4, 5, 22, 66, 55, 44, 11, 9, 8, 7, 6]\n",
+      "[1, 2, 3, 4, 5, 11, 66, 55, 44, 22, 9, 8, 7, 6]\n",
+      "[1, 2, 3, 4, 5, 9, 66, 55, 44, 22, 11, 8, 7, 6]\n",
+      "[1, 2, 3, 4, 5, 8, 66, 55, 44, 22, 11, 9, 7, 6]\n",
+      "[1, 2, 3, 4, 5, 7, 66, 55, 44, 22, 11, 9, 8, 6]\n",
+      "[1, 2, 3, 4, 5, 6, 66, 55, 44, 22, 11, 9, 8, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 55, 66, 44, 22, 11, 9, 8, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 44, 66, 55, 22, 11, 9, 8, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 22, 66, 55, 44, 11, 9, 8, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 11, 66, 55, 44, 22, 9, 8, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 9, 66, 55, 44, 22, 11, 8, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 8, 66, 55, 44, 22, 11, 9, 7]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 66, 55, 44, 22, 11, 9, 8]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 55, 66, 44, 22, 11, 9, 8]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 44, 66, 55, 22, 11, 9, 8]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 22, 66, 55, 44, 11, 9, 8]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 11, 66, 55, 44, 22, 9, 8]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 9, 66, 55, 44, 22, 11, 8]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 66, 55, 44, 22, 11, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 55, 66, 44, 22, 11, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 44, 66, 55, 22, 11, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 22, 66, 55, 44, 11, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 11, 66, 55, 44, 22, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 66, 55, 44, 22, 11]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 55, 66, 44, 22, 11]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 44, 66, 55, 22, 11]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 22, 66, 55, 44, 11]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 66, 55, 44, 22]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 55, 66, 44, 22]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 44, 66, 55, 22]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 22, 66, 55, 44]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 22, 55, 66, 44]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 22, 44, 66, 55]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 22, 44, 55, 66]\n",
+      "Final L:  [1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 22, 44, 55, 66]\n"
+     ]
+    }
+   ],
+   "source": [
+    "swapSort([66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modSwapSort(L): \n",
+    "    \"\"\" L is a list on integers \"\"\"\n",
+    "    print(\"Original L: \", L)\n",
+    "    for i in range(len(L)):\n",
+    "        for j in range(len(L)):\n",
+    "            if L[j] < L[i]:\n",
+    "                # the next line is a short \n",
+    "                # form for swap L[i] and L[j]\n",
+    "                L[j], L[i] = L[i], L[j] \n",
+    "                print(L)\n",
+    "    print(\"Final L: \", L)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original L:  [66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[55, 66, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[44, 66, 55, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[22, 66, 55, 44, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[11, 66, 55, 44, 22, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[9, 66, 55, 44, 22, 11, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[8, 66, 55, 44, 22, 11, 9, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[7, 66, 55, 44, 22, 11, 9, 8, 6, 5, 4, 3, 2, 1]\n",
+      "[6, 66, 55, 44, 22, 11, 9, 8, 7, 5, 4, 3, 2, 1]\n",
+      "[5, 66, 55, 44, 22, 11, 9, 8, 7, 6, 4, 3, 2, 1]\n",
+      "[4, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 3, 2, 1]\n",
+      "[3, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 2, 1]\n",
+      "[2, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 1]\n",
+      "[1, 66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[66, 1, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[66, 55, 1, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[66, 55, 44, 1, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[66, 55, 44, 22, 1, 11, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[66, 55, 44, 22, 11, 1, 9, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[66, 55, 44, 22, 11, 9, 1, 8, 7, 6, 5, 4, 3, 2]\n",
+      "[66, 55, 44, 22, 11, 9, 8, 1, 7, 6, 5, 4, 3, 2]\n",
+      "[66, 55, 44, 22, 11, 9, 8, 7, 1, 6, 5, 4, 3, 2]\n",
+      "[66, 55, 44, 22, 11, 9, 8, 7, 6, 1, 5, 4, 3, 2]\n",
+      "[66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 1, 4, 3, 2]\n",
+      "[66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 1, 3, 2]\n",
+      "[66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 1, 2]\n",
+      "[66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "Final L:  [66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "modSwapSort([66, 55, 44, 22, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original L:  [0, 1, 30, 10]\n",
+      "[1, 0, 30, 10]\n",
+      "[30, 0, 1, 10]\n",
+      "[30, 1, 0, 10]\n",
+      "[30, 10, 0, 1]\n",
+      "[30, 10, 1, 0]\n",
+      "Final L:  [30, 10, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "modSwapSort([0,1,30,10])"
    ]
   },
   {
@@ -106,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
