--- a/MITx 6.00.2x/lecture6RandomWalksandMorePlotting/note&exercise.ipynb
+++ b/MITx 6.00.2x/lecture6RandomWalksandMorePlotting/note&exercise.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![Imgur](https://i.imgur.com/pKaLR9K.png)"
+   ]
   },
   {
    "cell_type": "code",
