--- a/MITx 6.00.2x/lecture6RandomWalksandMorePlotting/note&exercise.ipynb
+++ b/MITx 6.00.2x/lecture6RandomWalksandMorePlotting/note&exercise.ipynb
@@ -110,10 +110,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.randint(1, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(9001)\n",
+    "for i in range(random.randint(1, 10)):\n",
+    "    print (i)\n",
+    "    print(random.randint(1, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(9001)\n",
+    "d = random.randint(1, 10)\n",
+    "for i in range(random.randint(1, 10)):\n",
+    "#     print (i)\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(9001)\n",
+    "d = random.randint(1, 10)\n",
+    "for i in range(random.randint(1, 10)):\n",
+    "    print(d)"
+   ]
   },
   {
    "cell_type": "code",
